--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/data/lw.machines"]
 	path = src/data/lw.machines
-	url = https://github.com/LaserWeb/lw.machines
+	url = https://github.com/psych0d0g/lw.machines
 [submodule "src/data/lw.materials"]
 	path = src/data/lw.materials
-	url = https://github.com/LaserWeb/lw.materials.git
+	url = https://github.com/psych0d0g/lw.materials.git
