--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "4.0.999",
   "description": "LaserWeb",
   "main": "./src/index.js",
+  "overrides": {
+    "nan": "github:jkleinsc/nan#remove_accessor_signature"
+  },
   "scripts": {
     "start-server": "node node_modules/lw.comm-server/server.js",
     "start-app": "webpack-dev-server --progress --colors --open",
@@ -101,7 +104,7 @@
     "socket.io-client": "4.x",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "uuid": "^3.3.3",
+    "uuid": "^3.4.0",
     "validatorjs": "^3.17.1",
     "vex-js": "^3.1.0",
     "web-cam-cpp": "git+https://github.com/LaserWeb/web-cam-cpp.git",
