--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "scripts": {
     "start-server": "node node_modules/lw.comm-server/server.js",
-    "start-app": "webpack-dev-server --progress --colors --open",
-    "start-prod": "webpack-dev-server -p --progress --colors --open",
+    "start-app": "webpack-dev-server --progress --open",
+    "start-prod": "webpack-dev-server -p --progress --open",
     "start": "npm-run-all -p -r start-app start-server",
-    "bundle-dev": "webpack --progress --colors",
-    "bundle-prod": "webpack -p --progress --colors",
+    "bundle-dev": "NODE_OPTIONS='--openssl-legacy-provider' webpack --progress",
+    "bundle-prod": "NODE_OPTIONS='--openssl-legacy-provider' webpack -p --progress",
     "build-docs": "jsdoc -c ./jsdoc.json",
     "installdev": "git submodule init && git submodule update --remote && npm install && npm update lw.comm-server",
     "golive": "git checkout gh-pages && git pull && git merge dev-es6 && npm run bundle-dev && git add dist && git commit -m regen && git push && git checkout dev-es6"
@@ -42,15 +42,15 @@
   },
   "homepage": "https://laserweb.yurl.ch",
   "devDependencies": {
-    "ajv": "^5.2.1",
+    "ajv": "^8.12.0",
     "array-move": "^1.0.0",
     "aruco-marker": "^2.0.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.5",
     "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -63,7 +63,7 @@
     "file-loader": "^0.11.2",
     "flat": "^2.0.1",
     "floyd-steinberg": "^1.0.6",
-    "font-awesome": "^4.6.3",
+    "font-awesome": "^4.7.0",
     "gamepad.js": "git+https://github.com/neogeek/gamepad.js.git#d3f8f96e79",
     "gl-matrix": "^2.3.2",
     "hhmmss": "^1.0.0",
@@ -104,14 +104,14 @@
     "socket.io-client": "4.x",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "uuid": "^3.4.0",
     "validatorjs": "^3.17.1",
     "vex-js": "^3.1.0",
     "web-cam-cpp": "git+https://github.com/LaserWeb/web-cam-cpp.git",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "2.11.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.15.1",
     "webrtc-adapter": "^3.1.5",
-    "worker-loader": "^0.8.1",
+    "worker-loader": "^3.0.8",
     "xregexp": "^4.2.4"
   },
   "dependencies": {
